--- a/client/components/Header/Header.module.scss
+++ b/client/components/Header/Header.module.scss
@@ -15,7 +15,8 @@
             width: 100%;
             max-width: 24px;
         }
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
         align-items: center;
         justify-content: center;
         gap: 2.25rem;
