--- a/client/components/Side-menu/SideMenu.module.scss
+++ b/client/components/Side-menu/SideMenu.module.scss
@@ -1,8 +1,7 @@
 .container {
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    display: grid;
+    align-items: flex-start;
     position: absolute;
     min-height: 100vh;
     margin: -3rem;
@@ -10,6 +9,7 @@
     width: 300px;
     background: #01010126;
     right: 3rem;
+    align-content: flex-start;
     img {
         cursor: pointer;
         max-width: 29px;
@@ -18,9 +18,9 @@
 
     .items {
         
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
+        display: grid;
+        justify-content: flex-end;
+        text-align: right;
         gap: 12px;
         color: #9F9F9F;
         padding-top: 6rem;
